--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="br.com.dextra.poccanvas.MainActivity">
 
-    <HorizontalScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-            <br.com.dextra.poccanvas.LineChart
+        android:layout_height="0dp"
+        android:layout_weight="4"
+        android:background="#0bb989"
+        android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:id="@+id/textBox">
+            <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
-    </HorizontalScrollView>
-
-</RelativeLayout>
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                android:id="@+id/currency_symbol"
+                android:layout_toLeftOf="@+id/price_value"
+                android:layout_alignBottom="@+id/price_value"
+                android:layout_marginBottom="15dp"
+                android:textColor="#ffffff"
+                android:textSize="30sp"
+                android:text="R$"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="50sp"
+                android:textColor="#ffffff"
+                android:layout_above="@+id/bill_desc"
+                android:layout_alignParentRight="true"
+                android:paddingRight="10dp"
+                android:id="@+id/price_value"
+                android:text="350.0"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:textColor="#ffffff"
+                android:layout_alignParentBottom="true"
+                android:paddingRight="10dp"
+                android:id="@+id/bill_desc"
+                android:layout_alignParentRight="true"
+                android:text="Pagamento recebido em 24/12"/>
+        </RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scrollbars="none"
+                android:overScrollMode="never">
+                    <br.com.dextra.poccanvas.LineChart
+                        android:id="@+id/line_chart"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent" />
+            </HorizontalScrollView>
+        </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="List"/>
+    </LinearLayout>
+</LinearLayout>
