--- a/app/src/main/res/layout/fragment_collection_object.xml
+++ b/app/src/main/res/layout/fragment_collection_object.xml
@@ -1,7 +1,52 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/text1"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:textSize="128sp"
-    android:padding="32dp" />
+    android:orientation="vertical"
+    android:paddingTop="10dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingBottom="20dp">
+    <TextView
+        android:id="@+id/currency_symbol"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/bill_desc"
+        android:layout_toLeftOf="@+id/price_value"
+        android:layout_alignBaseline="@+id/price_value"
+        android:layout_marginBottom="15dp"
+        android:textColor="#ffffff"
+        android:textSize="30sp"
+        android:paddingRight="5dp"
+        android:gravity="bottom"
+        android:text="R$"/>
+    <TextView
+        android:id="@+id/price_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="50sp"
+        android:textColor="#ffffff"
+        android:layout_above="@+id/bill_desc"
+        android:layout_toLeftOf="@+id/price_cents_value"
+        android:gravity="bottom"/>
+    <TextView
+        android:id="@+id/price_cents_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:textColor="#ffffff"
+        android:layout_above="@+id/bill_desc"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/price_value"
+        android:gravity="top"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:textColor="#ffffff"
+        android:layout_alignParentBottom="true"
+        android:paddingRight="10dp"
+        android:id="@+id/bill_desc"
+        android:layout_alignParentRight="true"
+        android:text="Pagamento recebido em 24/12"/>
+</RelativeLayout>
