--- a/app/src/main/res/layout/fragment_collection_object.xml
+++ b/app/src/main/res/layout/fragment_collection_object.xml
@@ -2,7 +2,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingTop="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
@@ -11,42 +10,43 @@
         android:id="@+id/currency_symbol"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/bill_desc"
-        android:layout_toLeftOf="@+id/price_value"
-        android:layout_alignBaseline="@+id/price_value"
-        android:layout_marginBottom="15dp"
         android:textColor="#ffffff"
         android:textSize="30sp"
-        android:paddingRight="5dp"
-        android:gravity="bottom"
+        android:includeFontPadding="false"
+        android:layout_above="@+id/bill_desc"
+        android:layout_toLeftOf="@+id/price_value"
+        android:layout_marginRight="5dp"
+        android:paddingBottom="5dp"
         android:text="R$"/>
     <TextView
         android:id="@+id/price_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="50sp"
         android:textColor="#ffffff"
+        android:textSize="50sp"
+        android:includeFontPadding="false"
         android:layout_above="@+id/bill_desc"
         android:layout_toLeftOf="@+id/price_cents_value"
-        android:gravity="bottom"/>
+        android:text="300,"/>
     <TextView
         android:id="@+id/price_cents_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:paddingTop="5dp"
         android:textColor="#ffffff"
-        android:layout_above="@+id/bill_desc"
-        android:layout_alignParentRight="true"
+        android:textSize="30sp"
+        android:includeFontPadding="false"
+        android:layout_alignRight="@+id/bill_desc"
         android:layout_alignTop="@+id/price_value"
-        android:gravity="top"/>
+        android:text="00"/>
     <TextView
+        android:id="@+id/bill_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="15sp"
         android:textColor="#ffffff"
+        android:includeFontPadding="false"
         android:layout_alignParentBottom="true"
-        android:paddingRight="10dp"
-        android:id="@+id/bill_desc"
         android:layout_alignParentRight="true"
         android:text="Pagamento recebido em 24/12"/>
 </RelativeLayout>
