--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
                 android:layout_weight="2"
                 android:orientation="vertical">
                 <HorizontalScrollView
+                    android:id="@+id/scroll_line_chart"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scrollbars="none"
