--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,13 +49,11 @@
         </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/bill_description"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
         android:orientation="vertical">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="List"/>
+
     </LinearLayout>
 </LinearLayout>
