--- a/app/src/main/res/layout/fragment_bill_description.xml
+++ b/app/src/main/res/layout/fragment_bill_description.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical"
     android:background="#F4F4F4">
     <LinearLayout
+        android:id="@+id/graph_holder"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
