--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,12 +19,12 @@
                 android:id="@+id/pager"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="2"
+                android:layout_weight="3"
                 android:paddingTop="20dp">
 
-            <android.support.v4.view.PagerTitleStrip
+            <br.com.nextel.cleanversion.bill.pager.BillPagerTabStrip
                 android:id="@+id/pager_title_strip"
-                android:layout_height="wrap_content"
+                android:layout_height="35dp"
                 android:layout_width="match_parent"
                 android:textSize="18sp"
                 android:textColor="#fff" />
