--- a/app/src/main/res/layout/fragment_collection_object.xml
+++ b/app/src/main/res/layout/fragment_collection_object.xml
@@ -2,10 +2,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="10dp"
     android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingBottom="20dp">
+    android:paddingRight="10dp">
     <TextView
         android:id="@+id/currency_symbol"
         android:layout_width="wrap_content"
@@ -16,7 +14,7 @@
         android:layout_above="@+id/bill_desc"
         android:layout_toLeftOf="@+id/price_value"
         android:layout_marginRight="5dp"
-        android:paddingBottom="5dp"
+        android:paddingBottom="3dp"
         android:text="R$"/>
     <TextView
         android:id="@+id/price_value"
