--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,26 +14,25 @@
             android:id="@+id/bill_graph_holder"
             android:background="@drawable/red_green_transition"
             android:orientation="vertical">
+            <br.com.nextel.cleanversion.bill.pager.BillPagerTabStrip
+                android:id="@+id/pager_title_strip"
+                android:layout_height="0dp"
+                android:layout_width="match_parent"
+                android:layout_weight="2"
+                android:textSize="18sp"
+                android:orientation="horizontal"/>
             <android.support.v4.view.ViewPager
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/pager"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="4"
+                android:layout_weight="6"
                 android:paddingTop="10dp">
-
-            <br.com.nextel.cleanversion.bill.pager.BillPagerTabStrip
-                android:id="@+id/pager_title_strip"
-                android:layout_height="35dp"
-                android:layout_width="match_parent"
-                android:textSize="18sp"
-                android:textColor="#fff" />
-
             </android.support.v4.view.ViewPager>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="5"
+                android:layout_weight="7"
                 android:orientation="vertical">
                 <HorizontalScrollView
                     android:id="@+id/scroll_line_chart"
