--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
                 android:layout_width="match_parent"
                 android:layout_weight="2"
                 android:textSize="18sp"
-                android:orientation="horizontal"/>
+                android:scrollbars="none"
+                android:overScrollMode="never"/>
             <android.support.v4.view.ViewPager
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/pager"
