--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="br.com.nextel.cleanversion.bill.activity.MainActivity">
+    tools:context="br.com.nextel.cleanversion.bill.activity.BillHomeActivity">
 
 
         <LinearLayout
